tests/algorithms/x/C/sorts/wiggle_sort.error
compile: exit status 1
/workspace/mochi/tests/algorithms/x/C/sorts/wiggle_sort.c: In function ‘swap’:
/workspace/mochi/tests/algorithms/x/C/sorts/wiggle_sort.c:91:19: warning: implicit declaration of function ‘list_append_double_new’; did you mean ‘list_append_double’? [-Wimplicit-function-declaration]
   91 |             res = list_append_double_new(res, res_len, xs[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
      |                   ^~~~~~~~~~~~~~~~~~~~~~
      |                   list_append_double
/workspace/mochi/tests/algorithms/x/C/sorts/wiggle_sort.c:91:17: warning: assignment to ‘double *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   91 |             res = list_append_double_new(res, res_len, xs[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
      |                 ^
/usr/bin/ld: /tmp/cc1V3u4d.o: in function `swap':
wiggle_sort.c:(.text+0x519): undefined reference to `list_append_double_new'
collect2: error: ld returned 1 exit status
