tests/algorithms/x/C/sorts/wiggle_sort.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:06 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t swap_len;
size_t wiggle_sort_len;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_list_double(const double *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[64];
        snprintf(tmp, sizeof(tmp), "%g", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static double* list_append_double(double *arr, size_t *len, double val) {
    arr = realloc(arr, (*len + 1) * sizeof(double));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

double * swap(double * xs, size_t xs_len, long long i, long long j);
double * wiggle_sort(double * nums, size_t nums_len);
int main(void);

double * swap(double * xs, size_t xs_len, long long i, long long j) {
    double *res = NULL;
    size_t res_len = 0;
    long long k = 0LL;
    while (k < xs_len) {
        if (k == i) {
            res = list_append_double_new(res, res_len, xs[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
            res_len++;
        } else {
            if (k == j) {
                res = list_append_double(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
            } else {
                res = list_append_double(res, &res_len, xs[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
            }
        }
        k = k + 1LL;
    }
    return swap_len = res_len, res;
}

double * wiggle_sort(double * nums, size_t nums_len) {
    long long i = 0LL;
    double *res = nums;
    size_t res_len = nums_len;
    while (i < res_len) {
        long long j;
        if (i == 0LL) {
            j = res_len - 1LL;
        } else {
            j = i - 1LL;
        }
        double prev = res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})];
        double curr = res[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})];
        if (((i % 2LL) == 1LL) == (prev > curr)) {
            res = swap(res, res_len, j, i);
            res_len = swap_len;
        }
        i = i + 1LL;
    }
    return wiggle_sort_len = res_len, res;
}

int main(void) {
    {
        long long __start = _now();
        puts(({double *__tmp5 = wiggle_sort((double[]){3.0, 5.0, 2.0, 1.0, 6.0, 4.0}, 6); char *__res = str_list_double(__tmp5, wiggle_sort_len); __res;}));
        puts(({double *__tmp6 = wiggle_sort((double[]){0.0, 5.0, 3.0, 2.0, 2.0}, 5); char *__res = str_list_double(__tmp6, wiggle_sort_len); __res;}));
        puts(({double *__tmp7 = wiggle_sort(NULL, 0); char *__res = str_list_double(__tmp7, wiggle_sort_len); __res;}));
        puts(({double *__tmp8 = wiggle_sort((double[]){-2.0, -5.0, -45.0}, 3); char *__res = str_list_double(__tmp8, wiggle_sort_len); __res;}));
        puts(({double *__tmp9 = wiggle_sort((double[]){-2.1, -5.68, -45.11}, 3); char *__res = str_list_double(__tmp9, wiggle_sort_len); __res;}));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
